# Odin-Nav-Stack-sixlegs

./: HEXAPOD_MIGRATION_GUIDE.md  HEXAPOD_TO_NEUPAN_INTEGRATION.md  README.md
ros2_ws/: MIGRATION_STATUS.md  QUICK_REFERENCE.sh  README.md  setup_ros2.sh
ros2_ws/src/neupan_ros2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/neupan_ros2/config/: config.yaml  planner.yaml
ros2_ws/src/neupan_ros2/launch/: neupan.launch.py
ros2_ws/src/neupan_ros2/neupan_ros2/: __init__.py  neupan_node.py
