<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neupan_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 implementation of NeuPAN (Neural Parallel Autonomy) for Dobot Mini Hex V2</description>
  
  <maintainer email="tcy1998@example.com">tcy1998</maintainer>
  <license>MIT</license>
  
  <author>tcy1998</author>
  
  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Python dependencies (system) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
